--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "es5",
   "tabWidth": 2,
+  "useTabs": true,
+  "printWidth": 80,
   "semi": true,
-  "singleQuote": false
+  "trailingComma": "es5",
+  "singleQuote": true
 }
